# skill-repo-tracker

./: .gitignore  AGENTS.md  LICENSE  README.md  RELEASE_NOTES.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.mjs
docs/: macos-release-checklist.md  release-checksums-v1.1.10.txt  release-checksums-v1.1.11.txt  release-checksums-v1.1.7.txt  release-checksums-v1.1.8.txt  release-checksums-v1.1.9.txt
docs/audits/: functional-action-audit-v1.1.10.md
docs/promo/v1.1.6/: README.md  publishing-checklist.md  value-and-boundary-audit.md  video-comparison.md  video-script.md  wechat-article.md
docs/promo/v1.1.6/video/: DESIGN.md  README.md  index.html  narration.txt
docs/promo/v1.1.6/video-remotion/: package-lock.json  package.json  tsconfig.json
docs/promo/v1.1.6/video-remotion/src/: Promo.tsx  Root.tsx  constants.ts
docs/promo/v1.1.8/: README.md  asset-prompts.md  install-validation.md  review.md  wechat-article.md
docs/releases/: v1.1.10.md  v1.1.11.md  v1.1.2.md  v1.1.8.md  v1.1.9.md
src/: App.tsx  GitHubWorkbench.tsx  PluginsView.tsx  api.ts  inspectorDismiss.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  plugins.rs
