[package]
name = "skill-repo-tracker"
version = "1.0.0"
description = "Local-first GitHub repository and Skill update manager"
authors = ["Skill Repo Tracker"]
license = "MIT"
repository = "https://github.com/xrevoman-hu/skill-repo-tracker"
homepage = "https://github.com/xrevoman-hu/skill-repo-tracker"
readme = "../README.md"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "skill_repo_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
hex = "0.4"
keyring = { version = "3", features = ["apple-native"] }
opener = "0.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tempfile = "3"
tokio = { version = "1", features = ["sync"] }
urlencoding = "2"
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
